--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -12,6 +12,7 @@
 .topLeft{
     background-color: lightgrey;
     position: absolute;
+    width: 50vw;
     top: 0;
     right: 0;
     left: 0;
@@ -49,7 +50,7 @@
 }
 
 .fullLogo{
-    width: 50%;
+    width: 40%;
     margin-top: 0.7em;
     display: block;
     margin-left: auto;
@@ -59,9 +60,10 @@
 .auth{
     width: fit-content;
     display: block;
-    margin-left: 10%;
-    margin-right: 90%;
-    margin-top: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 25%;
+    box-shadow: 5px 10px #888888;
 }
 
 .reg{
@@ -70,4 +72,110 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
+    text-align: center;
+    box-shadow: 2px 5px whitesmoke
+}
+
+#collage-container{
+	width:700px;
+	height:500px;
+	margin: 14% auto;
+    position: relative;
+    background-image: url('./images/polaroid.jpeg');
+    opacity: 0.75;
+}
+
+#collage-one,#collage-two,#collage-three,#collage-four,
+#collage-five,#collage-six,#collage-seven, #collage-eight{
+	padding:10px;
+	border-radius:20px;
+	-moz-border-radius:20px;
+	-webkit-border-radius:20px;
+	position:absolute;
+}
+
+#collage-one{
+    height: 20vh; 
+    z-index:1;
+    top:10px;
+    left:20px;
+    transform:rotate(-20deg);
+    -o-transform:rotate(-20deg);
+    -moz-transform:rotate(-20deg);
+    -webkit-transform:rotate(-20deg);
+    }
+
+#collage-two{
+    height: 20vh;  
+    z-index:2;
+    top:5px;
+    right:20px;
+    transform:rotate(10deg);
+    -o-transform:rotate(10deg);
+    -moz-transform:rotate(10deg);
+    -webkit-transform:rotate(10deg);
+    }
+
+#collage-three{
+    width: 12vw; 
+    z-index:3;
+    top:120px;
+    left:30px;
+    transform:rotate(30deg);
+    -o-transform:rotate(30deg);
+    -moz-transform:rotate(30deg);
+    -webkit-transform:rotate(30deg);
+    }
+
+#collage-four{
+    height: 13vw; 
+    z-index:4;
+    top:320px;
+    left:60px;
+    transform:rotate(-20deg);
+    -o-transform:rotate(-40deg);
+    -moz-transform:rotate(-40deg);
+    -webkit-transform:rotate(-40deg);
+}
+
+#collage-five{
+    width: 15vw; 
+    z-index:5;
+    top:150px;
+    left:450px;
+    transform:rotate(-40deg);
+    -o-transform:rotate(-43deg);
+    -moz-transform:rotate(-40deg);
+    -webkit-transform:rotate(-40deg);
+}
+#collage-six{
+    height: 15vw; 
+    z-index:6;
+    top:30px;
+    left:280px;
+    transform:rotate(-10deg);
+    -o-transform:rotate(-10deg);
+    -moz-transform:rotate(-10deg);
+    -webkit-transform:rotate(-10deg);
+}
+#collage-seven{
+    height: 15vw; 
+    z-index:7;
+    top:250px;
+    left:250px;
+    transform:rotate(30deg);
+    -o-transform:rotate(30deg);
+    -moz-transform:rotate(30deg);
+    -webkit-transform:rotate(30deg);
+}
+
+#collage-eight{
+    width: 15vw; 
+    z-index:7;
+    top:380px;
+    left:460px;
+    transform:rotate(-30deg);
+    -o-transform:rotate(-30deg);
+    -moz-transform:rotate(-30deg);
+    -webkit-transform:rotate(-30deg);
 }
