--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -77,12 +77,14 @@
 }
 
 #collage-container{
-	width:700px;
-	height:500px;
-	margin: 14% auto;
+	width: 100%;
+    /* height:500px; */
+    height: 80vh;
+	margin: 12% auto;
     position: relative;
     background-image: url('./images/polaroid.jpeg');
-    opacity: 0.75;
+    /* opacity: 0.75; */
+    background-size: cover;
 }
 
 #collage-one,#collage-two,#collage-three,#collage-four,
