--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300&family=Montserrat&display=swap');
-/*font-family: 'Dosis', sans-serif;
-font-family: 'Montserrat', sans-serif;  */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@300;800&family=Lobster&family=Montserrat&display=swap');
+/* font-family: 'Dosis', sans-serif;
+font-family: 'Lobster', cursive;
+font-family: 'Montserrat', sans-serif; */
 
 .mainContainer{
     background-color: whitesmoke;
