--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -236,14 +236,14 @@ font-family: 'Montserrat', sans-serif; */
 }
 
 
-/* .flip-card {
+.flip-card {
     background-color: transparent;
     width: 20em;
     height: 24em;
     perspective: 1000px; 
   }
   
-  .flip-card-inner {
+.flip-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
@@ -252,23 +252,57 @@ font-family: 'Montserrat', sans-serif; */
     transform-style: preserve-3d;
   }
   
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+.flip-card .flip-card-inner {
+    animation: flipY 3s forwards;
   }
-  
-  .flip-card-front, .flip-card-back {
+
+.flip-card-front, .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-  } */
+  } 
  
-  /* .flip-card-front {
-    background-color: whitesmoke;
+.flip-card-front {
     color: black;
-  } */
-/*   
-  .flip-card-back {
+    animation: hideFront 3s forwards;
+  } 
+
+.flip-card-back {
     transform: rotateY(180deg);
-  } */
+  } 
+
+@keyframes flipY{
+    from {
+        -webkit-transform: rotateY(0deg);
+    }
+    
+    to {
+        -webkit-transform: rotateY(180deg);
+    }
+}
+@keyframes hideFront{
+    from {
+        visibility: visible;
+    }
+    
+    to {
+        visibility: hidden;
+    }
+}
+/* 
+@keyframes flipY {
+    100% { -webkit-transform: rotateY(180deg); }
+} */
+/* 
+@keyframes flipX{
+    from {
+        -webkit-transform: rotateX(180deg);
+    }
+    
+    to {
+        -webkit-transform: rotateX(-180deg);
+    }
+    
+} */
