--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -94,6 +94,11 @@ font-family: 'Montserrat', sans-serif; */
     text-shadow: -3px 1px 0 #000
 }
 
+.check{
+    width: 1.25em;
+    padding-right: 0.25em;
+}
+
 .regFont{
     font-size: 3em;
     text-shadow: 2px -2px 0 #000
